MiniTriangle Compiler/Tests/ForVarToUntilError4.tri
! ********** No modificar el valor de i **********
! Syntactic Analysis ...
! 0
! Contextual Analysis ...
! ERROR: LHS of assignment is not a variable 9..9
! Compilation was unsuccessful.

for
  var i := 1 to 10 until 10>10 do
    i:= 10
end
